# console_calculator

./: CMakeLists.txt  NOTICE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-single-platform.yml  cpplint.yml
cmakes/: compile_option.cmake
src/: main.cpp
src/calculator/: CMakeLists.txt  arithmetic.hpp  calculator.cpp  calculator.hpp  calculator_define.hpp  calculator_message.hpp
src/console_io/: CMakeLists.txt  console_io.cpp  console_io.hpp
src/core/: concepts.hpp
test/: CMakeLists.txt
test/main/: CMakeLists.txt  test_main.cpp
